...
    Scaffold(
        modifier = Modifier
            .imePadding()
            .navigationBarsPadding()
            .systemBarsPadding(),
        topBar = {
            TopAppBar(title = { Text("Sign up") }, navigationIcon = {
                IconButton(onClick = { onBack() }) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Arrow Back",
                    )
                }
            })
        },
    ) { innerPaddings ->
        LaunchedEffect(Unit) {
...
            ) {
                OutlinedTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp)
                        .focusRequester(emailFocusRequester)
                        .testTag("EmailTextField"),
                    value = email,
                    onValueChange = {
                        email = it
                        emailError = checkEmailError()
                    },
                    singleLine = true,
...
                            painter = painterResource(id = R.drawable.email),
                            contentDescription = "email",
                        )
                    },
                    isError = showError && emailError,
                    supportingText = if (showError && emailError) {
                        { Text(text = "Please enter a valid email address") }
                    } else {
                        null
                    },
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next,
                        keyboardType = KeyboardType.Email,
                    ),
                )
                OutlinedTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp)
                        .testTag("UsernameTextField"),
                    value = username,
                    onValueChange = {
                        username = it
                        usernameError = checkUsernameError()
                    },
                    singleLine = true,
...
                            painter = painterResource(id = R.drawable.user),
                            contentDescription = "user",
                        )
                    },
                    isError = showError && usernameError,
                    supportingText = if (showError && usernameError) {
                        { Text(text = "Please enter a valid username") }
                    } else {
                        null
                    },
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next,
                        keyboardType = KeyboardType.Text,
                    ),
                )
                PasswordTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp)
                        .testTag("PasswordTextField"),
                    label = "Password",
                    password = password,
                    onPasswordChanged = {
                        password = it
                        passwordError = checkPasswordError()
                        repeatPasswordError = checkRepeatPasswordError()
                    },
                    supportingText = "At least 8 characters including a letter and a number",
                    isError = showError && passwordError,
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                )
                PasswordTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp)
                        .testTag("RepeatPasswordTextField"),
                    label = "Repeat Password",
                    password = repeatPassword,
                    onPasswordChanged = {
                        repeatPassword = it
                        repeatPasswordError = checkRepeatPasswordError()
                    },
                    supportingText = if (showError && repeatPasswordError) "Passwords do not match" else null,
                    isError = showError && repeatPasswordError,
                    keyboardActions = KeyboardActions(onDone = {
                        submit()
                    }),
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                )
            }
            RoundedRectButton(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("SignUpButton"),
                onClick = { submit() },
                imeAnimation = animateImeDp(label = "AuthView_SignUpView_imeDp"),
                loading = loading,
            ) {
                Text("Sign up")
            }
...
