...
            .imePadding()
            .systemBarsPadding()
            .navigationBarsPadding(),
        topBar = {
            TopAppBar(title = {
                Text(
                    "Verify Email",
                    style = MaterialTheme.typography.headlineSmall,
                )
            }, navigationIcon = {
                IconButton(onClick = { onBack() }) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
...
                    Icon(painter = painterResource(id = R.drawable.key), contentDescription = "key")
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(horizontal = 16.dp)
                    .focusRequester(verificationCodeFocusRequester)
                    .testTag("VerificationCodeTextField"),
                keyboardActions = KeyboardActions(onDone = { submit() }),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            )
            Spacer(modifier = Modifier.weight(1f))
            RoundedRectButton(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("NextButton"),
                onClick = {
                    submit()
                },
                enabled = verificationCode.isNotBlank(),
                loading = loading,
                imeAnimation = animateImeDp(label = "AuthView_VerifyEmailView_imeDp"),
...
