...
    val focusManager = LocalFocusManager.current

    val scope = rememberCoroutineScope()

    val submit = {
        if (password.isEmpty()) {
            passwordError = "Please enter a password"
        } else {
            focusManager.clearFocus()
            loading = true
            scope.launch {
                onPasswordSubmitted(password).onSuccess {
                    withContext(Dispatchers.Main) { onNavigateBookList() }
...
